k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app-deployment
  namespace: test-ecommerce
  labels:
    app: ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-app
  template:
    metadata:
      labels:
        app: ecommerce-app
    spec:
      containers:
        - name: test-api
          image: registry.hextech.online/test-ecommerce/ecommerce-app:0.0.6
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-service
  namespace: test-ecommerce
spec:
  type: NodePort
  selector:
    app: ecommerce-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32001
