k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: app-ingress
  namespace: test-ecommerce
spec:
  ingressClassName: nginx
  rules:
  - host: app.hextech.online
    http:
      paths:
      - backend:
          service:
            name: ecommerce-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app.hextech.online
    secretName: app-certificate
